--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/microservices": "^6.10.14",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/swagger": "^4.1.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.4",
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
