--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/microservices": "^6.10.14",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.1.7",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
