--- a/package.json
+++ b/package.json
@@ -27,15 +27,21 @@
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.1.7",
+    "@nestjs/typeorm": "^7.0.0",
+    "cache-manager": "^3.2.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.1",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
-    "swagger-ui-express": "^4.1.2"
+    "swagger-ui-express": "^4.1.2",
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
