--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.1.7",
     "dotenv": "^8.2.0",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
