--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.1.7",
+    "dayjs": "^1.8.26",
     "dotenv": "^8.2.0",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
+    "nuid": "^1.1.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
